--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ packaging==25.0
 pluggy==1.5.0
 postgrest==1.0.1
 propcache==0.3.1
+psycopg==3.2.6
 psycopg2==2.9.10
 pydantic==2.11.2
 pydantic_core==2.33.1
