--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+bcrypt==4.3.0
 certifi==2025.1.31
 click==8.1.8
 deprecation==2.1.0
@@ -30,6 +31,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.4.3
 packaging==25.0
+passlib==1.7.4
 pluggy==1.5.0
 postgrest==1.0.1
 propcache==0.3.1
